# infrabooth-downloader

./: .gitattributes  .gitignore  BINARY_VERSIONS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/commands/: create-new-version.md
.github/workflows/: ci.yml  release.yml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-02-04.md
_bmad-output/implementation-artifacts/: 0-1-refactor-download-hooks.md  1-1-initialize-tauri-project.md  1-2-configure-tailwind-shadcn.md  2-3-create-sign-in-ui.md  (+42 more)
scripts/: Dockerfile.windows  build-release.sh  create-new-version.mjs  docker-build-windows.sh  setup-self-hosted-runner.sh
src/: App.test.tsx  App.tsx  app-shell.test.ts  bindings.ts  index.css  main.tsx  setup.test.ts  tailwind-config.test.ts
src-tauri/: .env.example  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/binaries/: checksums.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs  download.rs  ffmpeg.rs  mod.rs  playlist.rs  settings.rs  updater.rs  ytdlp.rs
src-tauri/src/models/: error.rs  mod.rs  url.rs
src-tauri/src/services/: auth_choice.rs  cancellation.rs  constants.rs  deep_link.rs  dev_server.rs  ffmpeg.rs  http.rs  metadata.rs  mod.rs  oauth.rs  paths.rs  pipeline.rs  playlist.rs  queue.rs  sidecar.rs  storage.rs  updater.rs  url_validator.rs  ytdlp.rs  ytdlp_errors.rs
(+415 files in other folders)
