[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
dotenvy = "0.15"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["specta"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
url = "2"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
keyring = "2"
regex = "1"
urlencoding = "2"
tempfile = "3"
id3 = "1"
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-clipboard-manager = "2"
once_cell = "1"

[[bin]]
name = "test_ytdlp"
path = "src/bin/test_ytdlp.rs"
